--- a/views/popup.html
+++ b/views/popup.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <button id="changeColor"></button>
-    <script src="popup.js"></script>
+    <script src="/scripts/popup.js"></script>
   </body>
 </html>
