Добавил в настройки поле weight для указания максимального веса тикета. Прокинул поле weight в boards.js .

--- a/views/options.html
+++ b/views/options.html
@@ -19,6 +19,10 @@
 						<td>Personal API token</td>
 						<td><input style="width: 100%" type="text" id="token" /></td>
 					</tr>
+					<tr>
+						<td>Max issue weight</td>
+						<td><input style="width: 100%" type="number" id="weight" /></td>
+					</tr>
 				</tbody>
 			</table>
 		</section>
